# afterburner-pascal

./: LICENSE  README.md  afterburner-pascal.cabal
src/: Afterburner.hs
src/Afterburner/: AST.hs  CodeGen.hs  Parser.hs  Types.hs
test-programs/: fact.pas  fib.pas
