name:                afterburner-pascal
version:             0.1.0.0
synopsis:            An ad-hoc Pascal compiler with an LLVM backend.
homepage:            https://github.com/Athas/afterburner-pascal/
license:             MIT
license-file:        LICENSE
author:              Troels Henriksen
maintainer:          athas@sigkill.dk
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable afterburner-pascal
  main-is:             Afterburner.hs
  build-depends:       base >=4.7,
                       text >=1.1,
                       mtl >=2.2,
                       parsec >=3.1,
                       filepath >=1.3,
                       transformers >=0.4,
                       containers >=0.5.5,
                       process >=1.2,
                       llvm-general-pure >= 3.4,
                       llvm-general >= 3.4
  hs-source-dirs:      src
  default-language:    Haskell2010
